<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentStatic"
        android:name="uni.nedalalqutati.fragmentsapp.MyFirstFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_my_first" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/dynamicFragmentContainer"
        android:name="uni.nedalalqutati.fragmentsapp.Dynamic_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentStatic"
        app:layout_constraintVertical_bias="0.0"
        tools:layout="@layout/fragment_dynamic_1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/infoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/information"
            android:background="@color/accent"
            android:textColor="@color/text"
      />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/image"
            android:background="@color/accent"
            android:textColor="@color/text"
           />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uniBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/uni"
            android:background="@color/accent"
            android:textColor="@color/text"
             />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>